[package]
name = "photo-captioner"
version = "0.1.1"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
description = "A tool to assist with creating and editing captions for a gallery of images"
readme = "README.md"
keywords = ["caption", "image", "gallery"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/kellpossible/photo-captioner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
cursive = "0.11"